syntax = "proto3";

package order;

option go_package = "proto/order";

import "inventory.proto";

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    float price = 3;
}

message Order {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    float total = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message OrderRequest {
    Order order = 1;
}

message OrderResponse {
    Order order = 1;
}

message OrderID {
    string id = 1;
}

message UserID {
    string id = 1;
}

message OrderListResponse {
    repeated Order orders = 1;
}

message StockCheckRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message StockCheckResponse {
    bool available = 1;
}

service OrderService {
    rpc CreateOrder(OrderRequest) returns (OrderResponse);
    rpc GetOrder(OrderID) returns (OrderResponse);
    rpc UpdateOrder(OrderRequest) returns (OrderResponse);
    rpc ListOrders(UserID) returns (OrderListResponse);
    rpc CheckStock(StockCheckRequest) returns (StockCheckResponse);
}